--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body{
-    color:red;
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: "Courier";
     font-size: 16px;
@@ -16,6 +17,12 @@ body{
     margin: 0;
     padding: 0.5em;
 }
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -35,4 +42,9 @@ body{
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
