--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,3 +48,10 @@ body{
     background: white;
     padding: 1em;
 }
+#footer
+{
+    background: #33A;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
